# api/docs/swagger.yaml
@@ -1576,6 +1576,8 @@ definitions:
     properties:
       block:
         type: string
+      email:
+        type: string
       expires_at:
         type: string
       flat_number:
@@ -1586,6 +1588,8 @@ definitions:
         type: string
       id:
         type: integer
+      phone:
+        type: string
       role:
         $ref: '#/definitions/models.FlatMemberInviteRole'
       society_name:
